# sk_a2a_mcp

./: .gitignore  A2A_MASTER_REFERENCE.md  README.md  pyproject.toml  start_all_agents.ps1  start_server.ps1  stop_all_agents.ps1  stop_server.ps1
a2a_agents/: README.md  a2a_card_server.py  a2a_cards_resolver.py  base_a2a_client.py  simple_agent.py  simple_server.py  sk_a2a_agent.py
a2a_agents/a2a_utils/: a2a_helper_functions.py
a2a_agents/currency_example/: base_client_example.py  currency_agent.py  sse_client.py  standard_client.py
a2a_agents/tests/: base_client_example.py  multi_agent_client_example.py  multi_agent_server_example.py  simple_client_example.py  test_currency_agent.py
app/: faq_agent.py  human_support_escalation_agent.py  mcp_tools_server.py  orchestrator_agent.py  technical_troubleshooting_agent.py
app/agent_registry/: agent_registry_server.py  discover_agents.py
ui/: README_CHAINLIT.md  app_client.py  app_client_cli.py  chat.py  orchestrator_client.py  requirements_chainlit.txt
utils/: cosmos_helpers.py  file_utils.py  llm_config.yaml  llm_text_generator.py  process_manager.py  text_utils.py
